--- a/css/main.css
+++ b/css/main.css
@@ -9,37 +9,48 @@ body {
   display: flex;
 }
 
-img {
-  max-width: 100%;
+img{
+  max-width: 90%;
 }
 
-.fishies {
+.fishlist {
   display: flex;
   flex-wrap: wrap;
-  width: 70%;
-  justify-content: space-evenly;
+  flex-basis: 100%;
+  justify-content: space-between;
+}
+.fishList {
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 100%;
+  justify-content: space-between;
 }
 
-.fishies__card {
+.fish{
   flex-basis: 30%;
 }
 
-aside{
-  width: 30%;
-  border: 1px solid red;
+.tipList{
   padding: 5px;
 }
 
-.location{
+.locations{
+  display: flex;
+  justify-content: space-between;
+}
+
+.locationCard{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  width: 100%;
 }
 .location__card{
-  flex-basis: 18%;
   border: 1px black dotted;
   padding: .5em;
   background-color: coral;
+  margin: 1px;
+  flex-basis: 18%;
 }
 .tips{
   border: 1px black solid;
@@ -61,49 +72,13 @@ aside{
   background-image: url("../Bruce.jpeg");
   color: white;
 }
-/* @media (max-width: 600px){
+@media (max-width: 600px){
 .fishies{
   flex-basis: 100%;
 }
-aside{
+tipList{
   flex-basis: 100%;
-} */
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
 
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-}
